Finished with the quotesView

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <!-- Navbar -->
     <!-- Navbar -->
     <nav>
-        <div class="weather-place" >
+        <div class="motivationalQuotes-container" >
+          
+        </div>
+        <div class="weatherData-container" >
         </div>
     </nav>
     <!-- Sidebar  -->
@@ -25,20 +28,20 @@
     <aside id="sidebar" >
         <ul class="list-pages" >
             <li>
-                <span class="logo" ><h2>Todo app</h2></span>
+                <span class="logo" ><h3>Todo app</h3></span>
                 <button id="toggle-btn" onclick="toggleSidebar()" >
-                    <svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" width="36px" fill="#e8eaed"><path d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"/></svg>
                 </button>
             </li>
             <li class="active" >
                 <a id="home-page" >
-                    <svg xmlns="http://www.w3.org/2000/svg"  height="36px" viewBox="0 -960 960 960" width="36px" fill="#e8eaed"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg"  height="24spx" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>
                     <span>Home</span>
                 </a>
             </li>
             <li>
                 <a id="chats-page" >
-                    <svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" width="36px" fill="#e8eaed"><path d="M640-160v-280h160v280H640Zm-240 0v-640h160v640H400Zm-240 0v-440h160v440H160Z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M640-160v-280h160v280H640Zm-240 0v-640h160v640H400Zm-240 0v-440h160v440H160Z"/></svg>
                     <span>Charts</span>
                 </a>
             </li>
