--- a/index.html
+++ b/index.html
@@ -25,23 +25,28 @@
     <!-- Sidebar  -->
     <!-- Sidebar  -->
  
-    <aside id="sidebar" >
+    <aside id="sidebar" class="close" >
         <ul class="list-pages" >
             <li>
                 <span class="logo" ><h4>Todo app</h4></span>
                 <button id="toggle-btn" onclick="toggleSidebar()" >
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"/></svg>
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"/></svg> -->
+                     <img src="./src/img/arrowback.png" >
                 </button>
             </li>
             <li class="active" >
                 <a id="home-page" >
-                    <svg xmlns="http://www.w3.org/2000/svg"  height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg"  height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg> -->
+                    <img src="./src/img/home.png" >
+
                     <span>Home</span>
                 </a>
             </li>
             <li>
                 <a id="chats-page" >
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M640-160v-280h160v280H640Zm-240 0v-640h160v640H400Zm-240 0v-440h160v440H160Z"/></svg>
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M640-160v-280h160v280H640Zm-240 0v-640h160v640H400Zm-240 0v-440h160v440H160Z"/></svg> -->
+                    <img src="./src/img/chart.png" >
+
                     <span>Charts</span>
                 </a>
             </li>
@@ -73,9 +78,9 @@
                     <button type="submit" class="add-task-button" >Add task</button>
                 </div>
             </form>
-            <ul class="tasks-list" >
+            <div class="tasks-list" >
                 
-            </ul>
+            </div>
         </div>
         <div class="right-main" >
             right
