--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="src/css/index.css" >
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=bar_chart" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=home" />
+    <!-- <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js" ></script> -->
 
     <script type="module" src="src/js/controller.js" ></script>
 </head>
@@ -83,7 +84,9 @@
             </div>
         </div>
         <div class="right-main" >
-            right
+           <div id="calendar" >
+
+           </div>
         </div>
         
     </main>
