Added the dialog

--- a/index.html
+++ b/index.html
@@ -79,6 +79,32 @@
                     <button type="submit" class="add-task-button" >Add task</button>
                 </div>
             </form>
+            <button class="open-form" >Open form</button>
+
+
+            <dialog>
+                <div class="close-header-form" >
+                    <div class="draggable-header-form" ></div>
+                    <button class="close-button-form" >
+                        <img src="./src/img/cross.png"   >
+                    </button>
+                </div>
+                <form class="form-new-task">
+                    <div class="input-title-form" >
+                        <input type="text" placeholder="Title" >
+                    </div>
+                    <div class="form-information" >
+                        <div class="form-description" >
+                            <img src="./src/img/job-description.png" alt="" class="form-icon">
+                            <textarea name="" id="">descriere</textarea>
+                        </div>
+                    </div>
+                </form>
+
+                
+            </dialog>
+
+
             <div class="tasks-list" >
                 
             </div>
