Added the addTaskView in the mvc architecture

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <button class="open-form" >Open form</button>
 
 
-            <dialog>
+            <dialog class="dialog-add-task" >
                 <div class="close-header-form" >
                     <div class="draggable-header-form" ></div>
                     <button class="close-button-form" >
