--- a/index.html
+++ b/index.html
@@ -91,14 +91,36 @@
                 </div>
                 <form class="form-new-task">
                     <div class="input-title-form" >
-                        <input type="text" placeholder="Title" >
+                        <input type="text" placeholder="Title" name="title" >
                     </div>
                     <div class="form-information" >
                         <div class="form-description" >
                             <img src="./src/img/job-description.png" alt="" class="form-icon">
-                            <textarea name="" id="">descriere</textarea>
+                            <textarea name="description" class="description-textarea">descriere</textarea>
+                        </div>
+                        <div class="form-time" >
+                            <img src="./src/img/clock.png" alt="clock image" class="form-icon" >
+                            <input type="time" class="input-time" name="start" >
+                            <div style="font-size: 0.8em;" >to</div>
+                            <input type="time" class="input-time" name="end" >
+                            <input type="date" class="input-date" name="date" >
+                        </div>
+                        <div class="form-category">
+                            <img src="./src/img/categories.png" alt="activity category" >
+                            <input list = 'category-options' name="activityCategory" >
+                            <datalist id="category-options" placeholder="task category" >
+                                <option value="Important" ></option>
+                                <option value="Job" ></option>
+                                <option value="Gym" ></option>
+                            </datalist>
+                        </div>
+                        <div class="form-color">
+                            <img src="./src/img/paint.png" alt="color category"  >
+                            <div style="font-size: 0.8em;" >category color</div>
+                            <input type="color" name="categoryColor" value="#ff00ff" >
                         </div>
                     </div>
+                    <button class="btn create-task" >Create task</button>
                 </form>
 
                 
