--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Main  -->
     <main>
         <div class="left-main" >
-            <form class="newTask-container" >
+            <!-- <form class="newTask-container" >
                 <div>
                     <span>Add new Task</span><input type="text" id="input-tasks" placeholder="task" >
                 </div>
@@ -78,20 +78,20 @@
                 <div class="add-task-container" >
                     <button type="submit" class="add-task-button" >Add task</button>
                 </div>
-            </form>
+            </form> -->
             <button class="open-form" >Open form</button>
 
 
             <dialog class="dialog-add-task" >
                 <div class="close-header-form" >
                     <div class="draggable-header-form" ></div>
-                    <button class="close-button-form" >
+                    <button class="close-form close-task " >
                         <img src="./src/img/cross.png"   >
                     </button>
                 </div>
                 <form class="form-new-task">
                     <div class="input-title-form" >
-                        <input type="text" placeholder="Title" name="title" >
+                        <input type="text" placeholder="Title" name="title" required >
                     </div>
                     <div class="form-information" >
                         <div class="form-description" >
@@ -121,6 +121,50 @@
                         </div>
                     </div>
                     <button class="btn create-task" >Create task</button>
+                </form>
+
+                
+            </dialog>
+
+            <dialog class="dialog-edit-event" >
+                <div class="close-header-form" >
+                    <div class="draggable-header-form" ></div>
+                    <button class="close-form close-event" >
+                        <img src="./src/img/cross.png" >
+                    </button>
+                </div>
+                <form class="form-edit-event">
+                    <div class="input-title-form " >
+                        <input type="text" placeholder="Title" name="title" required class="input-event" >
+                    </div>
+                    <div class="form-information" >
+                        <div class="form-description" >
+                            <img src="./src/img/job-description.png" alt="" class="form-icon">
+                            <textarea name="description" class="description-textarea">descriere</textarea>
+                        </div>
+                        <div class="form-time" >
+                            <img src="./src/img/clock.png" alt="clock image" class="form-icon" >
+                            <input type="time" class="input-time" name="start" >
+                            <div style="font-size: 0.8em;" >to</div>
+                            <input type="time" class="input-time" name="end" >
+                            <input type="date" class="input-date" name="date" >
+                        </div>
+                        <div class="form-category">
+                            <img src="./src/img/categories.png" alt="activity category" >
+                            <input list = 'category-options' name="activityCategory" >
+                            <datalist id="category-options" placeholder="task category" >
+                                <option value="Important" ></option>
+                                <option value="Job" ></option>
+                                <option value="Gym" ></option>
+                            </datalist>
+                        </div>
+                        <div class="form-color">
+                            <img src="./src/img/paint.png" alt="color category"  >
+                            <div style="font-size: 0.8em;" >category color</div>
+                            <input type="color" name="categoryColor" value="#ff00ff" >
+                        </div>
+                    </div>
+                    <button class="btn create-task" >Apply changes</button>
                 </form>
 
                 
