Enable editing the event. Implemented some constraints on events + allDay events

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="src/css/index.css" >
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=bar_chart" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=home" />
-    <!-- <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js" ></script> -->
     <title>Task Traker</title>
     <script type="module" src="src/js/controller.js" ></script>
 </head>
@@ -85,6 +84,7 @@
             <dialog class="dialog-add-task" >
                 <div class="close-header-form" >
                     <div class="draggable-header-form" ></div>
+                 
                     <button class="close-form close-task " >
                         <img src="./src/img/cross.png"   >
                     </button>
@@ -129,6 +129,9 @@
             <dialog class="dialog-edit-event" >
                 <div class="close-header-form" >
                     <div class="draggable-header-form" ></div>
+                    <button class="close-form delete-event " >
+                        <img src="./src/img/delete.png"   >
+                    </button>
                     <button class="close-form close-event" >
                         <img src="./src/img/cross.png" >
                     </button>
