Some css modified. Clean code before making the color object and the charts

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Main  -->
     <!-- Main  -->
     <!-- Main  -->
-    <main class="main" >
+    <div class="section-calendar" >
         <div class="left-main" >
             <div>
                 <button class="open-form" >Open form</button>
@@ -70,10 +70,11 @@
 
            </div>
         </div>   
-    </main>
-    <!-- <div class="charts-main" >
+        
+    </div>
+    <div class="section-charts" >
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis, minima omnis ipsum libero cum ad a ex. Ad sequi reiciendis tenetur quasi veritatis eveniet eum, delectus eius laudantium placeat. Nisi harum sunt, atque voluptatum laborum labore. Vitae saepe dolorum alias vel ipsa, est, temporibus quasi perferendis officiis corrupti ducimus aperiam harum culpa odit magni! Itaque iusto facere exercitationem molestiae pariatur, deserunt aperiam natus, sunt enim neque ea eligendi veritatis eius quas omnis aut nesciunt harum qui fuga odit? Consequatur porro corporis consequuntur, quae voluptatem nam veniam quis, eius fuga illo accusamus asperiores hic saepe fugiat a itaque pariatur obcaecati non?
-    </div> -->
+    </div>
 
     <dialog class="dialog-add-task" >
         <div class="close-header-form" >
@@ -198,7 +199,7 @@
                     <input type="color" name="categoryColor" value="#ff00ff" >
                 </div>
                 <div>
-                    <input id="check-event" type="checkbox" class="checkbox" name="checked" value="yes" />
+                    <input id="check-event" type="checkbox" class="checkbox" name="checked"  />
                     <label for="check-event" class="checkbox-label" >In progress</label>
                 </div>
 
