Category colors change correctly. Focus on datalist and change the categoryColor dynamically based on category

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Sidebar  -->
     <!-- Sidebar  -->
  
-    <aside id="sidebar" class="close" >
+    <aside id="sidebar" class="aside-sidebar" >
         <ul class="list-pages" >
             <li>
                 <span class="logo" ><h4>Todo app</h4></span>
@@ -72,9 +72,23 @@
         </div>   
         
     </div>
-    <div class="section-charts" >
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis, minima omnis ipsum libero cum ad a ex. Ad sequi reiciendis tenetur quasi veritatis eveniet eum, delectus eius laudantium placeat. Nisi harum sunt, atque voluptatum laborum labore. Vitae saepe dolorum alias vel ipsa, est, temporibus quasi perferendis officiis corrupti ducimus aperiam harum culpa odit magni! Itaque iusto facere exercitationem molestiae pariatur, deserunt aperiam natus, sunt enim neque ea eligendi veritatis eius quas omnis aut nesciunt harum qui fuga odit? Consequatur porro corporis consequuntur, quae voluptatem nam veniam quis, eius fuga illo accusamus asperiores hic saepe fugiat a itaque pariatur obcaecati non?
+
+
+
+    <div class="section-charts invisible" >
+
     </div>
+
+
+
+
+
+
+
+
+
+
+
 
     <dialog class="dialog-add-task" >
         <div class="close-header-form" >
