--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="src/css/index.css" >
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=bar_chart" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=home" />
+
+ 
     <title>Task Traker</title>
     <script type="module" src="src/js/controller.js" ></script>
 </head>
@@ -89,8 +91,11 @@
                 <canvas id="barChart"  aria-label="Hours per category for every day of the week" role="img"></canvas>
             </div>
             <div class="chart-wrapper">
-                <canvas id="matrixChart"  aria-label="Hours per category for every day of the week" role="img"></canvas>
+                <canvas id="lineChart"  aria-label="Hours per category for every day of the week" role="img"></canvas>
             </div>
+            <!-- <div class="chart-wrapper">
+                <canvas id="matrixChart"  aria-label="Hours per category for every day of the week" role="img"></canvas>
+            </div> -->
           
         </div>
     </div>
