Range of dates for doughnut and bar charts

--- a/index.html
+++ b/index.html
@@ -97,10 +97,32 @@
             </div>
 
             <div class="chart-wrapper">
+                <div class="date-inputs">
+                    <div class="input-wrapper">
+                        <label for="startDoughnut">Start</label>
+                        <input id="startDoughnut" type="date" class="startDate" />
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="endDoughnut" >End</label>
+                        <input id="endDoughnut" type="date" class="endDate"   />
+                    </div>
+                </div>
                 <canvas id="doughnutChart"  aria-label="Done and in progress tasks" role="img"></canvas>
             </div>
 
             <div class="chart-wrapper">
+                <div class="date-inputs">
+                    <div class="input-wrapper">
+                        <label for="startBar">Start</label>
+                        <input id="startBar" type="date" class="startDate" />
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="endBar" >End</label>
+                        <input id="endBar" type="date" class="endDate"   />
+                    </div>
+                </div>
                 <canvas id="barChart"  aria-label="Hours per category for every day of the week" role="img"></canvas>
             </div>
 
