Correct range for Pie, Doughnut and Bar charts

--- a/index.html
+++ b/index.html
@@ -127,6 +127,17 @@
             </div>
 
             <div class="chart-wrapper">
+                <div class="date-inputs">
+                    <div class="input-wrapper">
+                        <label for="startLine">Start</label>
+                        <input id="startLine" type="date" class="startDate" />
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="endLine" >End</label>
+                        <input id="endLine" type="date" class="endDate"   />
+                    </div>
+                </div>
                 <canvas id="lineChart"  aria-label="Hours per category for every day of the week" role="img"></canvas>
             </div>
             <!-- <div class="chart-wrapper">
